Assignment_3_Webpage/base.CSS
:root {
    --primary-color: rgb(255, 255, 255);
    --secondary-color: rgb(221, 160, 221);
    --bg-color: rgb(0, 0, 0);
    --font-color: rgb(0, 0, 0);
    --heading-color: rgb(0, 0, 0); 
}
[data-theme="dark"] {
    --primary-color: rgb(0, 0, 0);
    --secondary-color: rgb(221, 160, 221);
    --bg-color: rgb(255, 255, 255);
    --font-color: rgb(255, 255, 255);
    --heading-color: rgb(255, 255, 255);
}

.theme-switch-wrapper {
    display: flex;
    align-items: center;
    }
    
    .theme-switch-wrapper em {
    margin-left: 10px;
    font-size: 1rem;
    }
  .theme-switch {
    display: inline-block;
    height: 34px;
    position: relative;
    width: 60px;
  }
  
  .theme-switch input {
    display:none;
  }
  
  .slider {
    background-color: #ccc;
    bottom: 0;
    cursor: pointer;
    left: 0;
    position: absolute;
    right: 0;
    top: 0;
    transition: .4s;
  }
  
  .slider:before {
    background-color: #fff;
    bottom: 4px;
    content: "";
    height: 26px;
    left: 4px;
    position: absolute;
    transition: .4s;
    width: 26px;
  }
  
  input:checked + .slider {
    background-color: #66bb6a;
  }
  
  input:checked + .slider:before {
    transform: translateX(26px);
  }
  
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

